--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <scm>
+    <developerConnection>scm:git@github.com:lucianoshl/hubminer.git</developerConnection>
+  </scm>
+
   <!-- an incredible mess of dependencies onto old versions -->
   <!-- use at your own risk! -->
   <dependencies>
